src/objects/config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>chatter_email_reply_to__c</fullName>
        <label>Chatterから送信するメールのReply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cron_trigger_id__c</fullName>
        <label>スケジュール済みジョブID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>初期化</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>instance__c</fullName>
        <label>インスタンス</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>my_domain__c</fullName>
        <label>My Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>my_domain_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Domainが有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>need_re_initialization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>再初期化が必要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sandbox_name__c</fullName>
        <label>Sandbox名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_survey_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>アンケートサイトにアンケートリストを表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sites_username__c</fullName>
        <label>サイト ユーザー名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>survey_sites_domain__c</fullName>
        <label>アンケートサイトドメイン</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>survey_sites_url__c</fullName>
        <label>アンケートサイトURL</label>
        <type>Url</type>
    </fields>
    <label>すごいアンケート設定</label>
</CustomObject>